--- a/appendix.tex
+++ b/appendix.tex
@@ -512,3 +512,21 @@
  \centering
  \includegraphics[width=\textwidth]{ethics.pdf}
 \end{figure}
+\chapter{API Tasks for Controlled Study}
+\label{chap:appendix_questions}
+\begin{enumerate}
+  \item \textbf{List all Posts.} Use the WordPress REST API to get a list of all the blog posts from the blog at http://wp.spyrest.com"
+  \item \textbf{Find all posts by author Spyrest.} Use the WordPress REST API to find a list of all the blog posts by author Spyrest from the blog at http://wp.spyrest.com"
+  \item \textbf{List all Posts excluding ids 1 and 4} Use the WordPress REST API to find a list of all the blog posts where the post id is not 1 or 4 from the blog at http://wp.spyrest.com"
+  \item \textbf{Find the total number of Posts.} Use the WordPress REST API to find the total number of blog posts from the blog at http://wp.spyrest.com"
+  \item \textbf{Publish a Post} Use the WordPress REST API to publish a new post with title 'a random post', content 'lorem ipsum' and published date of 'January 1, 2016' on the blog at http://wp.spyrest.com"
+  \item \textbf{Update the excerpt of the Post you published to 'My new excerpt'.} Use the WordPress REST API to update the excerpt for the post you created from the blog at http://wp.spyrest.com."
+\end{enumerate}
+
+\chapter{Feedback Questionnaire for Controlled Study}
+
+\begin{enumerate}
+  \item Rate your experience of performing the API tasks using the \textbf{WordPress REST API} documentation (10 being the best possible).
+  \item Share your thoughts about the reasoning behind the above rating.
+\end{enumerate}
+
