--- a/introduction.tex
+++ b/introduction.tex
@@ -110,10 +110,17 @@ Related to RG1 and RG2, I aim to address the following research questions as my 
 \end{itemize}
 
 \section{Cohesion and Unitary Report}
-To address the aforementioned research goals and objectives, my research strategy included five sub-projects, which have resulted in publications at peer-reviewed international conferences. Table~\ref{table:chapter_summary} shows a high level overview of the flow of arguments between the sub-projects to meet the research goals and questions.
+To address the aforementioned research goals and objectives, my research strategy included five sub-projects, which have resulted in publications at peer-reviewed international conferences. Figure~\ref{fig:flow} and Table~\ref{table:chapter_summary} show a high level overview of the flow of arguments between the sub-projects to meet the research goals and questions.
+
+\begin{figure}[htb]
+  \includegraphics[width=\linewidth]{flow.png}
+  \caption{Overview of Flow of Arguments of the Sub-Projects }
+  \label{fig:flow}
+\end{figure}
+
 
 \begin{table}
-  \caption{Summary and Flow of Arguments of the Sub-projects}
+  \caption{Summary of the Sub-projects}
   \begin{tabular}{|p{1.5cm}|p{1.5cm}|p{1.5cm}|p{4.5cm}|p{6cm}|}
   \hline
   Chapter & Goal & Question& Research Project & Primary Outcome \\
