--- a/symbols.tex
+++ b/symbols.tex
@@ -13,8 +13,8 @@ Symbol~~~~~\= \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 
 \addsymbol \mbox{SOAP}: {Simple Object Access Protocol}
 \addsymbol \mbox{WSDL}: {Web Service Definition Language}
 \addsymbol \mbox{XML}: {Extensible Markup Language}
-\addsymbol \mbox{REST API Developer}: {A software developer that implements REST API systems}
-\addsymbol \mbox{REST API Client Developer}: {A software developer that implements systems using REST APIs}
+\addsymbol \mbox{REST API Developer}: {A software developer who implements REST API systems}
+\addsymbol \mbox{REST API Client Developer}: {A software developer who implements systems using REST APIs}
 
 
 
