fixes cases on Refs

--- a/case_study/references.bib
+++ b/case_study/references.bib
@@ -114,7 +114,7 @@
 },
 
 @inproceedings{mangler2010origin,
-  title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of RESTful Services},
+  title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of {RESTful} Services},
   author={Mangler, Juergen and Beran, Peter Paul and Schikuta, Erich},
   booktitle={Proc. of International Conference on Cluster, Cloud and Grid Computing (CCGrid)},
   pages={505--508},
@@ -169,7 +169,7 @@
 
 
 @misc{twitter_api,
-  title = {The Twitter REST API, Twitter Developers},
+  title = {The Twitter {REST API}, Twitter Developers},
   url = {https://dev.twitter.com/docs/api},
   howpublished = {https://dev.twitter.com/docs/api}
 },
@@ -268,7 +268,7 @@ language={English}
 @INPROCEEDINGS{4740521,
 author={Kopecky, J. and Gomadam, K. and Vitvar, T.},
 booktitle={Proc. of International Conference on Web Intelligence and Intelligent Agent Technology (WI-IAT)},
-title={hRESTS: An HTML Microformat for Describing RESTful Web Services},
+title={{hRESTS}: An HTML Microformat for Describing {RESTful} Web Services},
 year={2008},
 OPTmonth={Dec},
 volume={1},
