--- a/cisco_study/references.bib
+++ b/cisco_study/references.bib
@@ -168,7 +168,7 @@
 
 
 @misc{twitter_api,
-  title = {The Twitter REST API, Twitter Developers},
+  title = {The Twitter {REST API}, Twitter Developers},
   url = {https://dev.twitter.com/docs/api},
   howpublished = {https://dev.twitter.com/docs/api}
 },
