--- a/controlled_study/refs.bib
+++ b/controlled_study/refs.bib
@@ -458,7 +458,7 @@ publisher = {IEEE}
 @inproceedings{Verborgh_functional,
  author = {Verborgh, Ruben and Steiner, Thomas and Van Deursen, Davy and Coppens, Sam and Vall{\'e}s, Joaquim Gabarr\'{o} and Van de Walle, Rik},
  title = {Functional Descriptions As the Bridge Between Hypermedia {API}s and the Semantic Web},
- booktitle = {Proceedings of the Third International Workshop on RESTful Design},
+ booktitle = {Proceedings of the Third International Workshop on {RESTful Design}},
  series = {WS-REST '12},
  year = {2012},
  isbn = {978-1-4503-1190-8},
