--- a/spy_rest/references.bib
+++ b/spy_rest/references.bib
@@ -114,7 +114,7 @@
 },
 
 @inproceedings{mangler2010origin,
-  title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of RESTful Services},
+  title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of {RESTful} Services},
   author={Mangler, Juergen and Beran, Peter Paul and Schikuta, Erich},
   booktitle={Proc. of International Conference on Cluster, Cloud and Grid Computing (CCGrid)},
   pages={505--508},
@@ -169,7 +169,7 @@
 
 
 @misc{twitter_api,
-  title = {The Twitter REST API, Twitter Developers},
+  title = {The Twitter {REST API}, Twitter Developers},
   url = {https://dev.twitter.com/docs/api},
   howpublished = {https://dev.twitter.com/docs/api}
 },
@@ -265,7 +265,7 @@ language={English}
 @INPROCEEDINGS{Kopecky_hrests,
 author={Kopecky, J. and Gomadam, K. and Vitvar, T.},
 booktitle={Proc. of International Conference on Web Intelligence and Intelligent Agent Technology (WI-IAT)},
-title={hRESTS: An HTML Microformat for Describing RESTful Web Services},
+title={{hRESTS}: An HTML Microformat for Describing {RESTful} Web Services},
 year={2008},
 volume={1},
 pages={619-625},
@@ -508,7 +508,7 @@ doi={10.1109/ICWS.2013.76},}
 @INPROCEEDINGS{Mangler_rddl,
 author={Mangler, J. and Beran, P.P. and Schikuta, E.},
 booktitle={Cluster, Cloud and Grid Computing (CCGrid), IEEE/ACM International Conference on},
-title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of RESTful Services},
+title={On the Origin of Services Using RIDDL for Description, Evolution and Composition of {RESTful} Services},
 year={2010},
 pages={505-508},
 keywords={Automatic testing;Cloud computing;Computer science;Grid computing;Natural languages;Representational state transfer;Simple object access protocol;Skeleton;Visualization;XML;Composition;Description;Evolution;RESTful},
