ethics approval is removed from the paper

--- a/appendix.tex
+++ b/appendix.tex
@@ -506,12 +506,12 @@
  \centering
  \includegraphics[width=\textwidth]{copyrights/cisco_paper.pdf}
 \end{figure}
-\chapter{Ethics Certificate}
-\label{ethics}
-\begin{figure}
- \centering
- \includegraphics[width=\textwidth]{ethics.pdf}
-\end{figure}
+%\chapter{Ethics Certificate}
+%\label{ethics}
+%\begin{figure}
+ %\centering
+ %\includegraphics[width=\textwidth]{ethics.pdf}
+%\end{figure}
 \chapter{API Tasks for Controlled Study}
 \label{chap:appendix_questions}
 \begin{enumerate}
